# gnome-devel-docs

./: .gitlab-ci.yml  COPYING.GFDL  NEWS  autogen.sh  configure.ac  gnome-devel-docs.doap
accessibility-devel-guide/: Makefile.am
accessibility-devel-guide/C/: gad.xml  gtest.xml
accessibility-devel-guide/cs/: cs.po
accessibility-devel-guide/de/: de.po
accessibility-devel-guide/es/: es.po
accessibility-devel-guide/ko/: ko.po
accessibility-devel-guide/pt_BR/: pt_BR.po
accessibility-devel-guide/sv/: sv.po
hig/: Makefile.am
hig/C/: adaptive-design.page  application-basics.page  application-menus.page  button-menus.page  buttons.page  compatibility.page  design-principles.page  dialogs.page  display-compatibility.page  drop-down-lists.page  full-screen.page  grids.page  header-bars.page  icon-design.page  icons-and-artwork.page  in-app-notifications.page  index.page  info-bars.page  initial-state-placeholders.page  keyboard-input.page  menu-bars.page  menus.page  notifications.page  overlaid-controls.page  pointer-and-touch-input.page  primary-menus.page  primary-windows.page  progress-spinners.page  search.page  secondary-menus.page  selection-mode.page  sliders.page  switches.page  tabs.page  text-fields.page  toolbars.page  typography.page  visual-layout.page  writing-style.page
hig/cs/: cs.po
hig/de/: de.po
hig/es/: es.po
hig/gl/: gl.po
hig/pt_BR/: pt_BR.po
hig/sv/: sv.po
optimization-guide/C/: harmful.page  introduction.page
optimization-guide/cs/: cs.po
optimization-guide/de/: de.po
optimization-guide/es/: es.po
optimization-guide/fr/: fr.po
optimization-guide/gl/: gl.po
optimization-guide/ko/: ko.po
optimization-guide/pt_BR/: pt_BR.po
optimization-guide/sv/: sv.po
platform-demos/: Makefile.am
platform-demos/C/: beginner.c.page  c.page  combobox.py.page  combobox_multicolumn.py.page  custom-gsource.c.page  dotdesktop.page  grid_with_entry.js.page  hello-world.c.page  hello-world.js.page  hello-world.py.page  hello-world.vala.page  hellognome.js.page  menubutton.js.page  menubutton.vala.page  set-up-gedit.js.page  spinner.py.page  statusbar.js.page  statusbar.py.page  treeview_advanced_liststore.py.page  treeview_simple_liststore.py.page  weatherAppMain.js.page  weatherAutotools.js.page
platform-demos/ca/: ca.po
platform-demos/cs/: cs.po
platform-demos/de/: de.po
platform-demos/es/: es.po
platform-demos/gl/: gl.po
platform-demos/ko/: ko.po
platform-demos/pt_BR/: pt_BR.po
platform-demos/sv/: sv.po
platform-overview/: ChangeLog
platform-overview/C/: dev-help-appmenu.page  dev-help-build.page  dev-help-write.page  dev-launching-desktop.page  dev-launching-icons.page  dev-launching-mime.page  dev-launching-startupnotify.page  dev-translate-build.page  overview-communication.page  overview-io.page  overview-media.page  overview-net.page  overview-settings.page  overview-ui.page  tech-atk.page  tech-cairo.page  tech-champlain.page  tech-clutter.page  tech-eds.page  tech-gda.page  tech-gdk.page  tech-gio.page  tech-gtk.page  tech-network-manager.page  tech-pango.page  tech-spell-checking.page  tech-webkit.page  tech.page
platform-overview/cs/: cs.po
platform-overview/de/: de.po
platform-overview/es/: es.po
platform-overview/gl/: gl.po
platform-overview/ko/: ko.po
platform-overview/pt_BR/: pt_BR.po
platform-overview/sv/: sv.po
platform-overview/uk/: uk.po
programming-guidelines/: Makefile.am
programming-guidelines/C/: additional-materials.page  api-stability.page  async-programming.page  databases.page  file-system.page  gerror.page  introspection.page  main-contexts.page  namespacing.page  parallel-installability.page  threading.page  tooling.page  unit-testing.page  writing-good-code.page
programming-guidelines/cs/: cs.po
programming-guidelines/de/: de.po
programming-guidelines/es/: es.po
programming-guidelines/ko/: ko.po
programming-guidelines/ro/: ro.po
(+24 files in other folders)
